# Autodrive_Controller

bolt/: CMakeLists.txt  gps_converter.py  heading.py  package.xml  resize_image.py  sphere_waypoint_visuals.py  straight_waypoint_pub.py  testing  testing.cpp
bolt/Extract_Datapoints/: GeneratedRoute.data  generatewaypoints.py  publishwaypoints.py
bolt/cfg/: Visuals.rviz
bolt/launch/: cameras.launch  controller.launch  everything.launch  everything_for_calibration.launch  everything_yangwoo.launch  export_images.launch  follow_test.launch  gps.launch  lidar_for_calibration.launch  lidars.launch
bolt_msgs/: CMakeLists.txt  package.xml
bolt_msgs/msg/: BrakeCmd.msg  BrakeReport.msg  CarData.msg  SteeringCmd.msg  SteeringReport.msg  StopSign.msg  TargetPath.msg  ThrottleCmd.msg  ThrottleReport.msg
bolt_msgs/scripts/: simulation_test.py
rj_controller/: CMakeLists.txt  ListofTasks.cpp  abc.py  package.xml
rj_controller/cfg/: long_gains.cfg
rj_controller/include/: CarConstants.h  CombinedNodeException.h  CombinedROSNode.h  Filter.h  Gains.h  LateralFeedback.h  LateralFeedforward.h  LateralGains.h  Longitudinal.h  LowPass.h  PidControl.h  Point.h  velocity.h
rj_controller/scripts/: calDragForceConstants.py  main.py  simulated_inputs.py  simulation2boltgapfix.py  stop_distance.py
rj_controller/src/: CarConstants.cpp  CombinedROSNode.cpp  Filter.cpp  LateralFeedback.cpp  LateralFeedforward.cpp  Longitudinal.cpp  control.cpp  gains.txt  polyfit.cpp  velocity.cpp  velocity_node.cpp
